--- a/go_utils.html
+++ b/go_utils.html
@@ -66,7 +66,9 @@ go_utils    </h1>
 
                         <details>
             <summary>View Source</summary>
-            <div class="codehilite"><pre><span></span><span class="kn">from</span> <span class="nn">go_utils.download</span> <span class="kn">import</span> <span class="o">*</span>
+            <div class="codehilite"><pre><span></span><span class="c1"># flake8: noqa</span>
+
+<span class="kn">from</span> <span class="nn">go_utils.download</span> <span class="kn">import</span> <span class="n">get_api_data</span>
 
 <span class="n">__docformat__</span> <span class="o">=</span> <span class="s2">&quot;numpy&quot;</span>
 
