Update from https://github.com/IGES-Geospatial/globe-observer-utils/commit/fb56bb53517c8279ee3542ddac8b90c4c3f2d9de

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
             <h2>Available Modules</h2>
             <ul>
                     <li><a href="go_utils.html">go_utils</a></li>
+                    <li><a href="go_utils/cleanup.html">go_utils.cleanup</a></li>
                     <li><a href="go_utils/download.html">go_utils.download</a></li>
                     <li><a href="go_utils/info.html">go_utils.info</a></li>
+                    <li><a href="go_utils/lc.html">go_utils.lc</a></li>
+                    <li><a href="go_utils/mhm.html">go_utils.mhm</a></li>
             </ul>
         </div>
     </nav>
