Update from https://github.com/IGES-Geospatial/globe-observer-utils/commit/09e6cff8210e03614e56f18f13663eb0a5571781

--- a/go_utils.html
+++ b/go_utils.html
@@ -50,10 +50,12 @@
                     <h2>Submodules</h2>
                     <ul>
                             <li><a href="go_utils/cleanup.html">go_utils.cleanup</a></li>
+                            <li><a href="go_utils/cli.html">go_utils.cli</a></li>
                             <li><a href="go_utils/download.html">go_utils.download</a></li>
                             <li><a href="go_utils/info.html">go_utils.info</a></li>
                             <li><a href="go_utils/lc.html">go_utils.lc</a></li>
                             <li><a href="go_utils/mhm.html">go_utils.mhm</a></li>
+                            <li><a href="go_utils/photo_download.html">go_utils.photo_download</a></li>
                             <li><a href="go_utils/plot.html">go_utils.plot</a></li>
                     </ul>
 
@@ -79,6 +81,7 @@ go_utils    </h1>
 <ul>
 <li>Easy downloading of the GLOBE Observer datasets as Pandas DataFrames</li>
 <li>Utilities for cleaning up Mosquito Habitat Mapper and Landcover Datasets</li>
+<li>CLI Scripts for downloading data and photos for the Mosquito Habitat Mapper and Landcover Protocols.</li>
 </ul>
 </div>
 
@@ -99,6 +102,7 @@ go_utils    </h1>
 
 <span class="s2">- Easy downloading of the GLOBE Observer datasets as Pandas DataFrames</span>
 <span class="s2">- Utilities for cleaning up Mosquito Habitat Mapper and Landcover Datasets</span>
+<span class="s2">- CLI Scripts for downloading data and photos for the Mosquito Habitat Mapper and Landcover Protocols.</span>
 <span class="s2">&quot;&quot;&quot;</span>
 </pre></div>
 
