--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
             <ul>
                     <li><a href="go_utils.html">go_utils</a></li>
                     <li><a href="go_utils/cleanup.html">go_utils.cleanup</a></li>
+                    <li><a href="go_utils/cli.html">go_utils.cli</a></li>
                     <li><a href="go_utils/download.html">go_utils.download</a></li>
                     <li><a href="go_utils/info.html">go_utils.info</a></li>
                     <li><a href="go_utils/lc.html">go_utils.lc</a></li>
                     <li><a href="go_utils/mhm.html">go_utils.mhm</a></li>
+                    <li><a href="go_utils/photo_download.html">go_utils.photo_download</a></li>
                     <li><a href="go_utils/plot.html">go_utils.plot</a></li>
             </ul>
         </div>
