--- a/go_utils/lc.html
+++ b/go_utils/lc.html
@@ -670,7 +670,7 @@
         <span class="k">return</span> <span class="n">df</span>
 
 
-<span class="k">def</span> <span class="nf">apply_cleanup</span><span class="p">(</span><span class="n">lc_df</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">apply_cleanup</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">unpack</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Applies a full cleanup procedure to the landcover data.</span>
 <span class="sd">    It follows the following steps:</span>
 <span class="sd">    - Removes Homogenous Columns</span>
@@ -686,6 +686,8 @@
 <span class="sd">    ----------</span>
 <span class="sd">    lc_df : pd.DataFrame</span>
 <span class="sd">        A DataFrame containing **raw** Landcover Data from the API.</span>
+<span class="sd">    unpack : bool</span>
+<span class="sd">        If True, the Landcover data will expand the classifications into separate columns (results in around 300 columns).</span>
 
 <span class="sd">    Returns</span>
 <span class="sd">    -------</span>
@@ -697,7 +699,8 @@
     <span class="n">remove_homogenous_cols</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">rename_latlon_cols</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">cleanup_column_prefix</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
-    <span class="n">lc_df</span> <span class="o">=</span> <span class="n">unpack_classifications</span><span class="p">(</span><span class="n">lc_df</span><span class="p">)</span>
+    <span class="k">if</span> <span class="n">unpack</span><span class="p">:</span>
+        <span class="n">lc_df</span> <span class="o">=</span> <span class="n">unpack_classifications</span><span class="p">(</span><span class="n">lc_df</span><span class="p">)</span>
     <span class="n">round_cols</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">standardize_null_vals</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">lc_df</span>
@@ -1905,12 +1908,12 @@ Whether to return a new DataFrame. If True then no DataFrame copy is not returne
 
         
             <span class="def">def</span>
-            <span class="name">apply_cleanup</span><span class="signature">(lc_df)</span>:
+            <span class="name">apply_cleanup</span><span class="signature">(lc_df, unpack=True)</span>:
     </div>
 
                 <details>
             <summary>View Source</summary>
-            <div class="codehilite"><pre><span></span><span class="k">def</span> <span class="nf">apply_cleanup</span><span class="p">(</span><span class="n">lc_df</span><span class="p">):</span>
+            <div class="codehilite"><pre><span></span><span class="k">def</span> <span class="nf">apply_cleanup</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">unpack</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Applies a full cleanup procedure to the landcover data.</span>
 <span class="sd">    It follows the following steps:</span>
 <span class="sd">    - Removes Homogenous Columns</span>
@@ -1926,6 +1929,8 @@ Whether to return a new DataFrame. If True then no DataFrame copy is not returne
 <span class="sd">    ----------</span>
 <span class="sd">    lc_df : pd.DataFrame</span>
 <span class="sd">        A DataFrame containing **raw** Landcover Data from the API.</span>
+<span class="sd">    unpack : bool</span>
+<span class="sd">        If True, the Landcover data will expand the classifications into separate columns (results in around 300 columns).</span>
 
 <span class="sd">    Returns</span>
 <span class="sd">    -------</span>
@@ -1937,7 +1942,8 @@ Whether to return a new DataFrame. If True then no DataFrame copy is not returne
     <span class="n">remove_homogenous_cols</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">rename_latlon_cols</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">cleanup_column_prefix</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
-    <span class="n">lc_df</span> <span class="o">=</span> <span class="n">unpack_classifications</span><span class="p">(</span><span class="n">lc_df</span><span class="p">)</span>
+    <span class="k">if</span> <span class="n">unpack</span><span class="p">:</span>
+        <span class="n">lc_df</span> <span class="o">=</span> <span class="n">unpack_classifications</span><span class="p">(</span><span class="n">lc_df</span><span class="p">)</span>
     <span class="n">round_cols</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">standardize_null_vals</span><span class="p">(</span><span class="n">lc_df</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">lc_df</span>
@@ -1964,6 +1970,8 @@ It follows the following steps:</p>
 <ul>
 <li><strong>lc_df</strong> (pd.DataFrame):
 A DataFrame containing <strong>raw</strong> Landcover Data from the API.</li>
+<li><strong>unpack</strong> (bool):
+If True, the Landcover data will expand the classifications into separate columns (results in around 300 columns).</li>
 </ul>
 
 <h6 id="returns">Returns</h6>
