Update from https://github.com/IGES-Geospatial/globe-observer-utils/commit/d6fd847ff115271197b6979b5aafea9065156a0e

--- a/go_utils.html
+++ b/go_utils.html
@@ -50,6 +50,7 @@
                 <li><a href="go_utils/cleanup.html">cleanup</a></li>
                 <li><a href="go_utils/constants.html">constants</a></li>
                 <li><a href="go_utils/download.html">download</a></li>
+                <li><a href="go_utils/filtering.html">filtering</a></li>
                 <li><a href="go_utils/geoenrich.html">geoenrich</a></li>
                 <li><a href="go_utils/lc.html">lc</a></li>
                 <li><a href="go_utils/mhm.html">mhm</a></li>
